build/log/idf_py_stdout_output_293007
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/lukas/esp/PIR/02/Template_modified/build/bootloader/esp-idf/esptool_py && /home/lukas/.espressif/python_env/idf5.3_py3.12_env/bin/python /home/lukas/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/lukas/esp/PIR/02/Template_modified/build/bootloader/bootloader.bin
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[2/9] No install step for 'bootloader'
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/lukas/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/lukas/esp/PIR/02/Template_modified/build/config -I/home/lukas/esp/PIR/02/Template_modified/main -I/home/lukas/esp/esp-idf/components/newlib/platform_include -I/home/lukas/esp/esp-idf/components/freertos/config/include -I/home/lukas/esp/esp-idf/components/freertos/config/include/freertos -I/home/lukas/esp/esp-idf/components/freertos/config/xtensa/include -I/home/lukas/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/lukas/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/lukas/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/lukas/esp/esp-idf/components/freertos/esp_additions/include -I/home/lukas/esp/esp-idf/components/esp_hw_support/include -I/home/lukas/esp/esp-idf/components/esp_hw_support/include/soc -I/home/lukas/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/lukas/esp/esp-idf/components/esp_hw_support/dma/include -I/home/lukas/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/lukas/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/lukas/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/lukas/esp/esp-idf/components/heap/include -I/home/lukas/esp/esp-idf/components/log/include -I/home/lukas/esp/esp-idf/components/soc/include -I/home/lukas/esp/esp-idf/components/soc/esp32 -I/home/lukas/esp/esp-idf/components/soc/esp32/include -I/home/lukas/esp/esp-idf/components/hal/platform_port/include -I/home/lukas/esp/esp-idf/components/hal/esp32/include -I/home/lukas/esp/esp-idf/components/hal/include -I/home/lukas/esp/esp-idf/components/esp_rom/include -I/home/lukas/esp/esp-idf/components/esp_rom/include/esp32 -I/home/lukas/esp/esp-idf/components/esp_rom/esp32 -I/home/lukas/esp/esp-idf/components/esp_common/include -I/home/lukas/esp/esp-idf/components/esp_system/include -I/home/lukas/esp/esp-idf/components/esp_system/port/soc -I/home/lukas/esp/esp-idf/components/esp_system/port/include/private -I/home/lukas/esp/esp-idf/components/xtensa/esp32/include -I/home/lukas/esp/esp-idf/components/xtensa/include -I/home/lukas/esp/esp-idf/components/xtensa/deprecated_include -I/home/lukas/esp/esp-idf/components/lwip/include -I/home/lukas/esp/esp-idf/components/lwip/include/apps -I/home/lukas/esp/esp-idf/components/lwip/include/apps/sntp -I/home/lukas/esp/esp-idf/components/lwip/lwip/src/include -I/home/lukas/esp/esp-idf/components/lwip/port/include -I/home/lukas/esp/esp-idf/components/lwip/port/freertos/include -I/home/lukas/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/lukas/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/lukas/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/lukas/esp/esp-idf/components/esp_event/include -I/home/lukas/esp/esp-idf/components/esp_wifi/include -I/home/lukas/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/lukas/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/lukas/esp/esp-idf/components/esp_wifi/include/local -I/home/lukas/esp/esp-idf/components/esp_phy/include -I/home/lukas/esp/esp-idf/components/esp_phy/esp32/include -I/home/lukas/esp/esp-idf/components/esp_netif/include -I/home/lukas/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/lukas/esp/esp-idf/components/tcp_transport/include -I/home/lukas/esp/esp-idf/components/esp-tls -I/home/lukas/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/lukas/esp/esp-idf/components/mbedtls/port/include -I/home/lukas/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/lukas/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/lukas/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/lukas/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/lukas/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/lukas/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/lukas/esp/esp-idf/components/esp_timer/include -I/home/lukas/esp/esp-idf/components/nvs_flash/include -I/home/lukas/esp/esp-idf/components/spi_flash/include -I/home/lukas/esp/esp-idf/components/esp_partition/include -I/home/lukas/esp/esp-idf/components/driver/deprecated -I/home/lukas/esp/esp-idf/components/driver/i2c/include -I/home/lukas/esp/esp-idf/components/driver/touch_sensor/include -I/home/lukas/esp/esp-idf/components/driver/twai/include -I/home/lukas/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/lukas/esp/esp-idf/components/esp_pm/include -I/home/lukas/esp/esp-idf/components/esp_ringbuf/include -I/home/lukas/esp/esp-idf/components/esp_driver_gpio/include -I/home/lukas/esp/esp-idf/components/esp_driver_pcnt/include -I/home/lukas/esp/esp-idf/components/esp_driver_gptimer/include -I/home/lukas/esp/esp-idf/components/esp_driver_spi/include -I/home/lukas/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/lukas/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/lukas/esp/esp-idf/components/esp_driver_i2s/include -I/home/lukas/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/lukas/esp/esp-idf/components/sdmmc/include -I/home/lukas/esp/esp-idf/components/esp_driver_sdspi/include -I/home/lukas/esp/esp-idf/components/esp_driver_sdio/include -I/home/lukas/esp/esp-idf/components/esp_driver_dac/include -I/home/lukas/esp/esp-idf/components/esp_driver_rmt/include -I/home/lukas/esp/esp-idf/components/esp_driver_tsens/include -I/home/lukas/esp/esp-idf/components/esp_driver_sdm/include -I/home/lukas/esp/esp-idf/components/esp_driver_i2c/include -I/home/lukas/esp/esp-idf/components/esp_driver_uart/include -I/home/lukas/esp/esp-idf/components/vfs/include -I/home/lukas/esp/esp-idf/components/esp_driver_ledc/include -I/home/lukas/esp/esp-idf/components/esp_driver_parlio/include -I/home/lukas/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/lukas/esp/PIR/02/Template_modified/esp-idf-lib-0.9.2/components/lc709203f -I/home/lukas/esp/PIR/02/Template_modified/esp-idf-lib-0.9.2/components/i2cdev -I/home/lukas/esp/PIR/02/Template_modified/esp-idf-lib-0.9.2/components/esp_idf_lib_helpers -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -w -fpermissive -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/lukas/esp/PIR/02/Template_modified=. -fmacro-prefix-map=/home/lukas/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/lukas/esp/PIR/02/Template_modified/main/main.c
In file included from /home/lukas/esp/esp-idf/components/esp_driver_gpio/include/driver/gpio.h:12,
                 from /home/lukas/esp/PIR/02/Template_modified/main/main.c:6:
/home/lukas/esp/PIR/02/Template_modified/main/main.c: In function 'app_main':
/home/lukas/esp/PIR/02/Template_modified/main/main.c:115:50: error: 'wakeup_pins_mask' undeclared (first use in this function)
  115 |     ESP_ERROR_CHECK(esp_sleep_enable_ext1_wakeup(wakeup_pins_mask, ESP_EXT1_WAKEUP_ANY_LOW));
      |                                                  ^~~~~~~~~~~~~~~~
/home/lukas/esp/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/lukas/esp/PIR/02/Template_modified/main/main.c:115:50: note: each undeclared identifier is reported only once for each function it appears in
  115 |     ESP_ERROR_CHECK(esp_sleep_enable_ext1_wakeup(wakeup_pins_mask, ESP_EXT1_WAKEUP_ANY_LOW));
      |                                                  ^~~~~~~~~~~~~~~~
/home/lukas/esp/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/lukas/esp/PIR/02/Template_modified/main/main.c:115:68: error: 'ESP_EXT1_WAKEUP_ANY_LOW' undeclared (first use in this function); did you mean 'ESP_EXT1_WAKEUP_ALL_LOW'?
  115 |     ESP_ERROR_CHECK(esp_sleep_enable_ext1_wakeup(wakeup_pins_mask, ESP_EXT1_WAKEUP_ANY_LOW));
      |                                                                    ^~~~~~~~~~~~~~~~~~~~~~~
/home/lukas/esp/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
[4/9] Completed 'bootloader'
ninja: build stopped: subcommand failed.
